<resources>
    <string name="app_name">Weather</string>
    <string name="clouds">Clouds</string>
    <string name="description">Description</string>
    <string name="direction">Direction</string>
    <string name="speed">Speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="open_weather">OpenWeatherMap</string>
    <string name="get_current_location_weather_details">Get Weather Details</string>

</resources>